# Combustion_HW0

./: .gitignore  CMakeLists.txt  README.md
cmake/: CanteraHints.cmake  FindCantera.cmake
src/: main.cpp
